Closed Bug 1856166 Opened 2 years ago Closed 2 years ago

Opening saved .eml file with X-Unsent has no subject in 115.3.1 (64-bit)

Categories

(Thunderbird :: Message Compose Window, defect)

Thunderbird 115
defect

Tracking

(thunderbird_esr115 fixed, thunderbird119 fixed)

RESOLVED FIXED
120 Branch
Tracking Status
thunderbird_esr115 --- fixed
thunderbird119 --- fixed

People

(Reporter: mozilla, Assigned: mkmelin)

References

(Regression)

Details

(Keywords: regression, triaged)

Attachments

(1 file)

Steps to reproduce:

Open a "saved message" via File/Open/Saved message or double-clicking a file with an eml extension set to open with Thunderbird

Actual results:

The "Write" window opens, but the "Subject" is blank.

Expected results:

The "Subject:" from the "saved message" should be used.
(I have re-installed 115.0 (64-bit), which works correctly).

That's a message with an X-Unsent header? Otherwise the compose window wouldn't open. A regression of bug 1788534 where obtaining the subject was changed. It is now obtained from the DB, but such a message isn't in the DB.

Severity: -- → S3
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression, triaged
Regressed by: 1788534
Summary: Opening saved file has no subject in 115.3.1 (64-bit) → Opening saved .eml file with X-Unsent has no subject in 115.3.1 (64-bit)

Since we can't get the db subject in that case, we should not overwrite the subject that mime puts there. https://searchfox.org/comm-central/rev/5c71fbceb55bbff85d911e3dbe41f4b987d0e862/mailnews/mime/src/mimedrft.cpp#345

Trying to get it from db will result in empty subject.

Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Target Milestone: --- → 120 Branch

Pushed by kaie@kuix.de:
https://hg.mozilla.org/comm-central/rev/d4db8c5d56dd
For compose based on saved .eml, preserve subject already set. r=babolivier

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED

Comment on attachment 9356177 [details]
Bug 1856166 - For compose based on saved .eml, preserve subject already set. r=#thunderbird-reviewers

[Approval Request Comment]
Regression caused by (bug #): bug 1788534
User impact if declined: empty subject for some lesser used compose actions
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): safe

Attachment #9356177 - Flags: approval-comm-esr115?
Attachment #9356177 - Flags: approval-comm-beta?

Comment on attachment 9356177 [details]
Bug 1856166 - For compose based on saved .eml, preserve subject already set. r=#thunderbird-reviewers

[Triage Comment]
Approved for beta

Attachment #9356177 - Flags: approval-comm-beta? → approval-comm-beta+

Comment on attachment 9356177 [details]
Bug 1856166 - For compose based on saved .eml, preserve subject already set. r=#thunderbird-reviewers

[Triage Comment]
Approved for esr115

Attachment #9356177 - Flags: approval-comm-esr115? → approval-comm-esr115+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: