Bug 1856166 - For compose based on saved .eml, preserve subject already set. r=babolivier

Trying to get it from db will result in empty subject.

Differential Revision: https://phabricator.services.mozilla.com/D189821

--HG--
extra : amend_source : df1225fc43103bef019c84c90147ea63bf04303c